[package]
name = "libfyaml-sys"
version = "0.2.8+fy0.8.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["api-bindings", "encoding", "parser-implementations"]
description = "Rust binding for libfyaml"
documentation = "https://docs.rs/libfyaml-sys"
edition = "2021"
keywords = ["yaml"]
license = "MIT"
links = "libfyaml"
repository = "https://github.com/dtolnay/libfyaml-rs"
rust-version = "1.63"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71"
cc = "1"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
